#10 Changed content for Jobs and Open Position pages

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -34,11 +34,9 @@
                        <hr class="space-sm careers-space-large-screen" />
                        <h1>Join us at IntelliFactory</h1>
                        <p>
-                            We have built a dynamic team of highly driven professionals
-                            with a commitment to technical excellence. At IntelliFactory,
-                            we are constantly striving for improvement:
-                            of our products, our industry and ourselves.
-                            We dare to explore, innovate and iterate.
+                            We are team of commited developers with a passion for perfect product.
+                            At Intellifactory, we develop applications with cutting-edge technologies.
+                            We try to lead the area of technology we are working and set the industry standards.
                         </p>
                         <a href="#current-jobs" class="btn btn-border btn-circle btn-sm">See open jobs</a>
                     </div>
@@ -50,7 +48,7 @@
                             <div class="grid-box">
                                 <div class="grid-item">
                                     <a class="img-box" href="ht">
-                                        <img src="assets/careers-2.jpg" />
+                                        <img src="http://via.placeholder.com/800x600" />
                                     </a>
                                 </div>
                             </div>
@@ -61,28 +59,24 @@
                 <hr class="space-lg" />
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2 class="align-center">Community</h2>
+                        <h2>Cutting-edge technology</h2>
                         <p>
-                            Creating an inviting office environment breeds creativity and 
-                            hard work. Whether we are destroying whiteboards in brainstorming 
-                            sessions, or just eating lunch together, we’ve 
-                            created a close-knit team and strong support network.
+                            Here at IntelliFactory we work with cutting-edge technology and try to keep up
+                            coming new technologies and develope applications with them. There is always room for improvement. 
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="align-center">Engagement</h2>
+                        <h2>Future career opportunties</h2>
                         <p>
-                            We are active and committed members of community. 
-                            We regularly attend industry events where we make important contributions and connections. 
-                            When we’re not the organizing event, we’re sharing our expertise on stage or via demos.
+                            We value hard work and commitment. We believe hard work should always be rewarded.
+                            That's why we make sure to let our developers have every opportunity to improve their careers.
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="align-center">Impact</h2>
+                        <h2>Friendly team</h2>
                         <p>
-                            We develop technology that makes a measurable difference around the world. 
-                            We value innovation that matters and gets results. 
-                            Join us at IntelliFactory and become a leader and active contributor in this influential industry.
+                            Our team is very happy and friendly. Here you will right at home. You will meet amazing people that will not
+                            be just co-workers but friends. We are always trying to create friendly team environment.
                         </p>
                     </div>
                 </div>
@@ -97,9 +91,9 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <p>
-                                    We are looking for a motivated F# developer to help us grow our business through a strong product strategy and expanded online presence. 
-                                    You will be responsible for helping us build our products for leading a variety of digital initiatives. 
-                                    Creativity, initiative and a proactive work ethic are highly valued!
+                                    We are looking for a motivated F# developer to help us grow our business and build new applications.
+                                    You will be responsible for planning, developing and testing of the applications.
+                                    Hard work and creativity are highly wanted and appreciated.
                                 </p>
                             </div>
                             <div class="col-lg-4">
@@ -158,11 +152,9 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <p>
-                                    As a software engineer, you will join our core team
-                                    working on our latest products. You will design,
-                                    implement advanced features, with the
-                                    goal of improving efficiency. You will also work on the
-                                    hard challenge of always improving the quality of service for the users.
+                                    As a software engineer, you will join our team
+                                    working on our latest products. You will help our both with existing product maintenance
+                                    and creating new products. You will attend brainstorm sessions for future product ideas as well.
                                 </p>
                             </div>
                             <div class="col-lg-4">
