Change icons to Font Awesome in Careers, Open Position and Trainings pages

--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -76,7 +76,7 @@
                                   <tr>
                                       <td>
                                           <div class="icon-box icon-box-left">
-                                              <i class="im-user text-md"></i>
+                                              <i class="fas fa-user-alt text-md"></i>
                                               <div class="caption">
                                                   <h3 class="text-sm">Availability</h3>
                                                   <p>1 people</p>
@@ -85,7 +85,7 @@
                                       </td>
                                       <td>
                                           <div class="icon-box icon-box-left">
-                                              <i class="im-calendar text-md"></i>
+                                              <i class="fas fa-calendar-alt text-md"></i>
                                               <div class="caption">
                                                   <h3 class="text-sm">Experience</h3>
                                                   <p>Min 2 years</p>
@@ -94,7 +94,7 @@
                                       </td>
                                       <td>
                                           <div class="icon-box icon-box-left">
-                                              <i class="im-student-malefemale text-md"></i>
+                                              <i class="fas fa-user-graduate text-md"></i>
                                               <div class="caption">
                                                   <h3 class="text-sm">Graduation</h3>
                                                   <p>Required</p>
