--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -120,7 +120,7 @@
                                     <tr>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-user text-md"></i>
+                                                <i class="fas fa-user-tie text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Expert</h3>
                                                     <p>John Smith</p>
@@ -129,7 +129,7 @@
                                         </td>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-calendar text-md"></i>
+                                                <i class="fas fa-calendar-alt text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Date</h3>
                                                     <p>15 January</p>
@@ -138,7 +138,7 @@
                                         </td>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-student-malefemale text-md"></i>
+                                                <i class="fas fa-users text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Group</h3>
                                                     <p>10-15 people</p>
@@ -179,7 +179,7 @@
                                     <tr>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-user text-md"></i>
+                                                <i class="fas fa-user-tie text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Expert</h3>
                                                     <p>Richard Dawson</p>
@@ -188,7 +188,7 @@
                                         </td>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-calendar text-md"></i>
+                                                <i class="fas fa-calendar-alt text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Date</h3>
                                                     <p>12 February</p>
@@ -197,8 +197,9 @@
                                         </td>
                                         <td>
                                             <div class="icon-box icon-box-left">
-                                                <i class="im-student-malefemale text-md"></i>
-                                                <div class="caption">Group</h3>
+                                                <i class="fas fa-users text-md"></i>
+                                                <div class="caption">
+                                                    <h3 class="text-sm">Graduation</h3>
                                                     <p>10 people</p>
                                                 </div>
                                             </div>
