--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -110,7 +110,7 @@
                                 <tr>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-user text-md"></i>
+                                            <i class="fas fa-user-alt text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Availability</h3>
                                                 <p>1 people</p>
@@ -119,7 +119,7 @@
                                     </td>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-calendar text-md"></i>
+                                            <i class="fas fa-calendar-alt text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Experience</h3>
                                                 <p>Min 2 years</p>
@@ -128,7 +128,7 @@
                                     </td>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-student-malefemale text-md"></i>
+                                            <i class="fas fa-user-graduate text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Graduation</h3>
                                                 <p>Required</p>
@@ -171,7 +171,7 @@
                                 <tr>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-user text-md"></i>
+                                            <i class="fas fa-user-alt text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Availability</h3>
                                                 <p>1 people</p>
@@ -180,7 +180,7 @@
                                     </td>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-calendar text-md"></i>
+                                            <i class="fas fa-calendar-alt text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Experience</h3>
                                                 <p>Min 3 years</p>
@@ -189,7 +189,7 @@
                                     </td>
                                     <td>
                                         <div class="icon-box icon-box-left">
-                                            <i class="im-student-malefemale text-md"></i>
+                                            <i class="fas fa-user-graduate text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Graduation</h3>
                                                 <p>Required</p>
