There are dark and light menubars - depending on the banners/images they are on. Use these css classes.

--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -83,6 +83,7 @@
                   <div class="panel active">
                     <div class="col">
                       <ul class="icon-list">
+                        <li><a href="/user/granicz/20201231-variations-for-a-websharper-shopping-cart">2020 - Variations for a WebSharper shopping cart</a></li>
                         <li><a href="/user/granicz/20191226-f-metablogging-introducing-blogengine-for-your-static-markdown-based-f-blog">2019 - F# metablogging: introducing BlogEngine for your static markdown-based F# blog</a></li>
                         <li><a href="/user/granicz/20181210-from-enterprise-to-next-generation-web-celebrating-11-years-with-websharper">2018 - From enterprise to next-generation web: celebrating 11 years with WebSharper</a></li>
                         <li><a href="/user/granicz/20171229-serving-spas">2017 - Serving SPAs</a></li>
