--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -26,7 +26,7 @@
 <body>
     <div id="preloader"></div>
     <!-- NAVIGATION MENU -->
-    <nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
+    <nav class="menu-wide menu-transparent dark menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <div ws-replace="HeaderContent" ws-template="TrainingBody">
