#10 Optimized images for Open Position page

--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -45,8 +45,8 @@
                           </ul>
                       </div>
                       <div class="col-lg-6">
-                          <img class="align-center"
-                               src="http://via.placeholder.com/1019x608" />
+                          <img style="display: block; margin: 0 auto;"
+                               src="assets/open-position-1.jpg" />
                       </div>
                   </div>
                   <hr class="space-lg" />
