#10 Optimized images for Jobs page and added FAQ section

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -28,12 +28,12 @@
     <main>
         <section class="section-base section-bottom-layer">
             <div class="container">
-                
+
                 <div class="row">
                     <div class="col-lg-6">
-                       <hr class="space-sm careers-space-large-screen" />
-                       <h1>Join us at IntelliFactory</h1>
-                       <p>
+                        <hr class="space-sm careers-space-large-screen" />
+                        <h1>Join us at IntelliFactory</h1>
+                        <p>
                             We are team of commited developers with a passion for perfect product.
                             At Intellifactory, we develop applications with cutting-edge technologies.
                             We try to lead the area of technology we are working and set the industry standards.
@@ -47,9 +47,7 @@
                              data-columns="1">
                             <div class="grid-box">
                                 <div class="grid-item">
-                                    <a class="img-box" href="ht">
-                                        <img src="http://via.placeholder.com/800x600" />
-                                    </a>
+                                    <img src="assets/careers-1.jpg" />
                                 </div>
                             </div>
                         </div>
@@ -62,7 +60,7 @@
                         <h2>Cutting-edge technology</h2>
                         <p>
                             Here at IntelliFactory we work with cutting-edge technology and try to keep up
-                            coming new technologies and develope applications with them. There is always room for improvement. 
+                            coming new technologies and develope applications with them. There is always room for improvement.
                         </p>
                     </div>
                     <div class="col-lg-4">
@@ -81,7 +79,7 @@
                     </div>
                 </div>
                 <hr class="space" />
-                <h2 id="current-jobs">Current open roles:</h2>
+                <h2 id="current-jobs" class="align-center">Current open roles:</h2>
                 <hr class="space" />
                 <hr class="space-xs" />
                 <h3>F# developer</h3>
@@ -203,6 +201,62 @@
                     <div class="col-lg-3">
                         <a href="#" class="btn btn-sm btn-circle full-width">Apply now</a>
                         <hr class="space-xs" />
+                    </div>
+                </div>
+                <hr class="space-lg" />
+                <h2 class="align-center">Frequently Asked Questions</h2>
+                <hr class="space-sm">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul class="accordion-list">
+                            <li>
+                                <a href="#">Should I still apply even though I have less than required experience?</a>
+                                <div class="content">
+                                    <p>
+                                        You should definetely send us your CV. It might turn out that you have actually learned more in a year
+                                        than people usually learn in 2 years.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">How can I be part of your team if there is no open position matching my skill set?</a>
+                                <div class="content">
+                                    <p>
+                                        Create a project you would be proud to show others using your skill set and send it to us alongside your CV.
+                                        We are always looking for talented developers.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">Will I be part of the development team?</a>
+                                <div class="content">
+                                    <p>
+                                        Yes, indeed you will be part of the development team from day one.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6" style="margin-top: 0">
+                        <ul class="accordion-list">
+                            <li>
+                                <a href="#">Do you require a university degree?</a>
+                                <div class="content">
+                                    <p>
+                                        No, we believe imagination is more important the knowledge.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">Will there be mentoring for junior developers?</a>
+                                <div class="content">
+                                    <p>
+                                        Our senior developers are the most friendly people ever. We believe there is no silly questions.
+                                        You can ask about anything you would like to know.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
