#19 Optimization for images on Trainings page

--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -48,7 +48,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6">
-                        <img class="margin-23 margin-md-23" src="http://via.placeholder.com/600x400" />
+                        <img class="margin-23 margin-md-23" src="assets/trainings-1.jpg" />
                     </div>
                 </div>
                 <hr class="space" />
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="cnt-box cnt-box-top">
-                            <a href="#" class="img-box"><img src="http://via.placeholder.com/600x400" alt="" /></a>
+                            <img src="assets/trainings-2.jpg" alt="" />
                             <div class="caption">
                                 <h2>Designed for you</h2>
                                 <span class="extra-field">Specific</span>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="cnt-box cnt-box-top">
-                            <a href="#" class="img-box"><img src="http://via.placeholder.com/600x400" alt="" /></a>
+                           <img src="http://via.placeholder.com/600x400" alt="" />
                             <div class="caption">
                                 <h2>Closed groups.</h2>
                                 <span class="extra-field">Private</span>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="cnt-box cnt-box-top">
-                            <a href="#" class="img-box"><img src="http://via.placeholder.com/600x400" alt="" /></a>
+                            <img src="http://via.placeholder.com/600x400" alt="" />
                             <div class="caption">
                                 <h2>Your data is safe.</h2>
                                 <span class="extra-field">Secure</span>
