#19 Image optimization for Trainings page

--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="cnt-box cnt-box-top">
-                           <img src="http://via.placeholder.com/600x400" alt="" />
+                           <img src="assets/trainings-3.jpg" alt="" />
                             <div class="caption">
                                 <h2>Closed groups.</h2>
                                 <span class="extra-field">Private</span>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="cnt-box cnt-box-top">
-                            <img src="http://via.placeholder.com/600x400" alt="" />
+                            <img src="assets/trainings-4.jpg" alt="" />
                             <div class="caption">
                                 <h2>Your data is safe.</h2>
                                 <span class="extra-field">Secure</span>
