#9 Optimizing images for Consulting page

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -44,13 +44,13 @@
 					<div class="col-lg-3">
 						<h2>Why IntelliFactory</h2>
 						<p>
-							The highest levels of service, strategic vision, agility, discipline, and execution are in our DNA. As a top F# development agency we bring clarity and vision to our clients.
+							We believe in top level of service and big vision in our development. As a top F# development agency we provide best products our clients.
 						</p>
 					</div>
 					<div class="col-lg-3">
 						<h2>Our mission</h2>
 						<p>
-							Creating the a most versatile, efficient application is essential but difficult. Our team will develop the perfect app to fit your needs using the best technologies.
+							We have made it our mission to create most versatile yet efficient products for our customers. Our developers use latest technologies to create our products.
 						</p>
 					</div>
 					<div class="col-lg-6">
@@ -58,22 +58,22 @@
 							<div class="grid-box">
 								<div class="grid-item">
 									<a class="img-box" href="assets/consulting-2.jpg">
-										<img src="assets/consulting-2.jpg">
+										<img src="assets/consulting-2-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
 									<a class="img-box" href="assets/consulting-3.jpg">
-										<img src="assets/consulting-3.jpg">
+										<img src="assets/consulting-3-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
 									<a class="img-box" href="assets/consulting-4.jpg">
-										<img src="assets/consulting-4.jpg">
+										<img src="assets/consulting-4-thumbnail.jpg">
 									</a>
 								</div>
 								<div class="grid-item">
 									<a class="img-box" href="assets/consulting-5.jpg">
-										<img src="assets/consulting-5.jpg">
+										<img src="assets/consulting-5-thumbnail.jpg">
 									</a>
 								</div>
 							</div>
@@ -134,7 +134,7 @@
 						<div class="panel">
 							<h3 class="timeline-title">Fast development, less code</h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
+								We believe in writing quality code instead of long code.
 							</p>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 						<div class="panel">
 							<h3 class="timeline-title">Business value created</h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
+								We try to create value which our customers and partners remember us with.
 							</p>
 						</div>
 					</div>
@@ -152,7 +152,7 @@
 						<div class="panel">
 							<h3 class="timeline-title">Shorter TTM</h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
+								Our motto: Ready, set, present. We try to keep time from idea to market to minimum.
 							</p>
 						</div>
 					</div>
