--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -42,25 +42,31 @@
               <a href="#">Open Source</a>
               <div class="mega-menu">
                 <div class="panel small-dev-menu">
-                  <div class="col-4">
+                  <div class="col-4 open-source-item ">
                     <img src="//via.placeholder.com/100x100" class="small-dev-hide" />
-                    <div><a href="https://websharper.com">WebSharper</a></div>
-                    <div class="description small-dev-hide">
-                      <div>This is an example text under this feel free to change this</div>
+                    <div>
+                      <div><a href="https://websharper.com">WebSharper</a></div>
+                      <div class="description small-dev-hide">
+                        <div>This is an example text under this feel free to change this</div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-4">
+                  <div class="col-4 open-source-item">
                     <img src="//via.placeholder.com/100x100" class="small-dev-hide" />
-                    <div><a href="https://fsbolero.io">Bolero</a></div>
-                    <div class="description small-dev-hide">
-                      <div>This is an example text under this feel free to change this</div>
+                    <div>
+                      <div><a href="https://fsbolero.io">Bolero</a></div>
+                      <div class="description small-dev-hide">
+                        <div>This is an example text under this feel free to change this</div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-4">
+                  <div class="col-4 open-source-item">
                     <img src="//via.placeholder.com/100x100" class="small-dev-hide" />
-                    <div><a href="https://github.com/granicz/SiteFi">SiteFi</a></div>
-                    <div class="description small-dev-hide">
-                      <div>This is an example text under this feel free to change this</div>
+                    <div>
+                      <div><a href="https://github.com/granicz/SiteFi">SiteFi</a></div>
+                      <div class="description small-dev-hide">
+                        <div>This is an example text under this feel free to change this</div>
+                      </div>
                     </div>
                   </div>
                 </div>
