#10 Fixed typo on Open Position page

--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -39,7 +39,7 @@
                               What you get:
                           </p>
                           <ul>
-                              <li>Different technoliges and challenges</li>
+                              <li>Different technologies and challenges</li>
                               <li>Balanced work and life</li>
                               <li>Growth professionally and personally</li>
                           </ul>
