#9 Optimizing images for Consulting page

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -29,10 +29,10 @@
 		<div ws-replace="MenuBar"></div>
 	</nav>
 	<!-- HEADER -->
-	<header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="assets\consulting-1.jpg" data-offset="0">
+	<header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="966" data-natural-width="1450" data-bleed="0" data-image-src="assets\consulting-1.jpg" data-offset="0">
 		<div class="container">
-			<h1>Build your F# application with us.</h1>
-			<h2>By weaving together advances in F# development, intelligent operations, and modern full-stack applications, we can help your company deliver on the promise of digital transformation.</h2>
+			<h1>Build your F# application with us</h1>
+			<h2>By weaving together advances in F# development, intelligent operations, and modern full-stack applications, we can help your company deliver on the promise of digital transformation</h2>
 		</div>
 	</header>
 	<!-- MAIN CONTENT -->
