Remove Bulma Drawer, Change header styling

--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -26,10 +26,10 @@
     <div ws-replace="MenuBar">
       <div ws-template="Menubar" class="container">
         <div class="menu-brand">
-          <a href="#">
+          <a class="menu-title" href="#">
             <img class="logo-default" src="/assets/if_logo.png" alt="logo" />
             <img class="logo-retina" src="/assets/if_logo.png" alt="logo" />
-            <span>${ShortTitle}</span>
+            <span><b>Intelli</b><span class="title-alternative">Factory</span></span>
           </a>
         </div>
         <i class="menu-btn"></i>
