--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Open Position</title>
     <meta name="description" content="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">  
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
     <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
@@ -23,7 +25,7 @@
   </head>
   <body>
       <div id="preloader"></div>
-      <nav class="menu-classic menu-transparent light menu-fixed menu-one-page
+      <nav class="menu-classic menu-transparent dark menu-fixed menu-one-page
     align-right menu-wide" data-menu-anima="fade-bottom"
            data-scroll-detect="true">
           <div ws-replace="MenuBar"></div>
