Open Source menu icon for small and big screens

--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -36,7 +36,7 @@
             <li>
               <a href="index.html">Consulting</a>
             </li>
-            <li class="mega-dropdown mega-tabs mega-open-source active">
+            <li class="mega-dropdown mega-tabs mega-open-source">
               <a href="#">Open Source</a>
               <div class="mega-menu">
                 <div class="panel small-dev-menu">
