#8 - Research page content WIP

--- a/src/Hosted/contact.html
+++ b/src/Hosted/contact.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div id="preloader"></div>
-    <nav class="menu-wide menu-transparent menu-fixed align-right dark" data-menu-anima="fade-bottom" data-scroll-detect="true">
+    <nav class="menu-wide menu-fixed align-right dark" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <main>
