--- a/src/Hosted/research.html
+++ b/src/Hosted/research.html
@@ -31,32 +31,130 @@
     </nav>
     <header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="assets\research-1.jpg" data-offset="0">
         <div class="container">
-            <h1>Research is in our DNA.</h1>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur in, quas ab doloremque velit maxime voluptate reiciendis repellat odit voluptates similique nobis animi impedit amet eaque. Sequi saepe reiciendis dolorum?</h2>
+            <h1>Research</h1>
+            <h2>At IntelliFactory, we thrive to be a company that is on the frontline in the war of the bleeding edge technologies and researches. Over the years we have published many articles/pages to different conferences all over the world.</h2>
         </div>
     </header>
     <main>
         <section class="section-base">
             <div class="container">
+                <ul class="custom-timeline">
+                    <li>
+                        <span class="year">2020</span>
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/doi/10.1145/3397537.3397554" target="_blank">Synthesizing User Interfaces using Functional Reactive Web Abstractions</a></p>
+                            <p>Adam Granicz, Jozsef Uri, Andras Janko</p>
+                            <p><a href="https://2020.programming-conference.org/home/proweb-2020" target="_blank">ProWeb20</a>, Porto, Portugal<span class="tl-small-date">, 2020</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="year">2016</span>
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/doi/10.1145/2892664.2892672" target="_blank">Enabling modular persistence for reactive data models in F# client-server web applications</a></p>
+                            <p>Loic Denuziere, Adam Granicz</p>
+                            <p><a href="https://2016.modularity.info/" target="_blank">Modularity</a>, Malaga, Spain<span class="tl-small-date">, 2016</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="year">2015</span>
+                        <div class="tl-content">
+                            <p><a href="https://link.springer.com/chapter/10.1007/978-3-030-28346-9_5" target="_blank">Functional, Reactive Web Programming in F#</a></p>
+                            <p>Adam Granicz, Loic Denuziere</p>
+                            <p><a href="https://www.springer.com/gp/book/9783030283452" target="_blank">CEFP</a>, Budapest, Hungary<span class="tl-small-date">, 2015</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- <span class="year">2015</span> -->
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/doi/10.1007/978-3-319-19686-2_5" target="_blank">Reactive Single-Page Applications with Dynamic Dataflow</a></p>
+                            <p>Simon Fowler, Loic Denuziere, Adam Granicz</p>
+                            <p><a href="https://www.cs.nmsu.edu/padl15/" target="_blank">PADL</a>, Portland, OR, USA<span class="tl-small-date">, 2015</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- <span class="year">2015</span> -->
+                        <div class="tl-content">
+                            <p><a href="https://pdfs.semanticscholar.org/eb57/611ccb0c8c2ef4beeed2709cfa37444a068a.pdf" target="_blank">Reactive Abstractions for Functional Web Applications</a></p>
+                            <p>Loic Denuziere, Adam Granicz, Simon Fowler</p>
+                            <p><a href="https://dl.acm.org/doi/proceedings/10.1145/2897336" target="_blank">IFL</a>, Koblenz, Germany<span class="tl-small-date">, 2015</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="year">2013</span>
+                        <div class="tl-content">
+                            <p><a href="https://link.springer.com/chapter/10.1007/978-3-319-15940-9_9" target="_blank">Functional Web and Mobile Development in F#</a></p>
+                            <p>Adam Granicz</p>
+                            <p><a href="https://link.springer.com/book/10.1007%2F978-3-319-15940-9" target="_blank">CEFP</a>, Budapest, Hungary<span class="tl-small-date">, 2013</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- <span class="year">2013</span> -->
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/citation.cfm?id=2620689" target="_blank">Piglets to the Rescue: Declarative User Interface Specification with Pluggable View Models</a></p>
+                            <p>Loic Denuziere, Ernesto Rodriguez, Adam Granicz</p>
+                            <p><a href="http://www.cs.ru.nl/P.Achten/IFL2013/IFL_2013_home.html" target="_blank">IFL</a>, Nijmegen, The Netherlands<span class="tl-small-date">, 2013</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- <span class="year">2013</span> -->
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/citation.cfm?id=2429383" target="_blank">Visualizing data on the web</a></p>
+                            <p>Loic Denuziere, Adam Granicz, Anton Tayanovskyy</p>
+                            <p><a href="https://dl.acm.org/doi/proceedings/10.1145/2429376" target="_blank">DDFP</a>, Rome, Italy<span class="tl-small-date">, 2013</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="year">2010</span>
+                        <div class="tl-content">
+                            <p><a href="https://link.springer.com/chapter/10.1007/978-3-642-24276-2_13" target="_blank">Composing Reactive GUIs in F# Using WebSharper</a></p>
+                            <p>Joel Bjornson, Anton Tayanovskyy, Adam Granicz</p>
+                            <p><a href="https://dl.acm.org/doi/10.1109/ICSM.2010.5609669" target="_blank">IFL</a>, Alphen aan den Rijn, The Netherlands<span class="tl-small-date">, 2010</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="year">2009</span>
+                        <div class="tl-content">
+                            <p><a href="https://dl.acm.org/doi/10.1145/1668113.1668119" target="_blank">The first substantial line of business application in F#</a></p>
+                            <p>Alex Peake, Adam Granicz</p>
+                            <p><a href="http://cufp.org/2009/" target="_blank">CUFP</a>, Edinburgh, Scotland<span class="tl-small-date">, 2009</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section-base">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2>Take a look at our projects.</h2>
+                        <h2>Sponsoring</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempor incididunt utlabore et dolore magna aliqua.
+                            Besides contributing papers to the conferences we are proud supporters of various events. Here you can find a list of events that we have sponsored so far:
                         </p>
                     </div>
                     <div class="col-lg-8">
                         <ul class="slider slider-side" data-options="type:carousel,arrows:false,nav:true,perView:3,perViewSm:2,perViewXs:1,controls:out,gap:30">
                             <li>
                                 <div class="cnt-box cnt-box-team">
-                                    <img src="assets/research-2.jpg" alt="" />
+                                    <div class="sponsor-logo-holder">
+                                        <img class="sponsor-logo sponsor-logo-icfp" src="/assets/conferences/icfp-grey.png" alt="" />
+                                    </div>
                                     <div class="caption">
-                                        <h2>Project #1</h2>
+                                        <h2>ICFP/CUFP</h2>
                                         <p>
-                                            Lorem ipsum dolor sitamet consectetur eiusmo.
+                                            We are proud to be the supporter of ICFP since 2012, being one of the long time supporters of the conference.
                                         </p>
                                         <span>
-                                            <a href="#" target="_blank">Read more about this project</i></a>
+                                            <a href="https://www.icfpconference.org/" target="_blank">Read more about this project</i></a>
                                         </span>
 
                                     </div>
@@ -64,28 +162,16 @@
                             </li>
                             <li>
                                 <div class="cnt-box cnt-box-team">
-                                    <img src="assets/research-3.jpg" alt="" />
-                                    <div class="caption">
-                                        <h2>Project #2</h2>
-                                        <p>
-                                            Lorem ipsum dolor sitamet consectetur eiusmo.
-                                        </p>
-                                        <span>
-                                            <a href="#" target="_blank">Read more about this project</a>
-                                        </span>
+                                    <div class="sponsor-logo-holder">
+                                        <img class="sponsor-logo sponsor-logo-fpbud" src="/assets/conferences/fp-bud-grey.png" alt="" />
                                     </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cnt-box cnt-box-team">
-                                    <img src="assets/research-4.jpg" alt="" />
                                     <div class="caption">
-                                        <h2>Project #3</h2>
+                                        <h2>FP-BUD</h2>
                                         <p>
-                                            Lorem ipsum dolor sitamet consectetur eiusmo.
+                                            We have created a functional 
                                         </p>
                                         <span>
-                                            <a href="#" target="_blank">Read more about this project</a>
+                                            <a href="https://www.meetup.com/fp-bud/" target="_blank">Read more about this project</i></a>
                                         </span>
 
                                     </div>
@@ -93,52 +179,39 @@
                             </li>
                             <li>
                                 <div class="cnt-box cnt-box-team">
-                                    <img src="assets/research-5.jpg" alt="" />
+                                    <div class="sponsor-logo-holder">
+                                        <img class="sponsor-logo sponsor-logo-fpdays" src="/assets/conferences/fpdays-grey.jpg" alt="" />
+                                    </div>
                                     <div class="caption">
-                                        <h2>Project #4</h2>
+                                        <h2>FPDays</h2>
                                         <p>
-                                            Lorem ipsum dolor sitamet consectetur eiusmo.
+                                            2013, 2014.
                                         </p>
                                         <span>
-                                            <a href="#" target="_blank">Read more about this project</a>
+                                            <a href="http://fpdays.net/2014/" target="_blank">Read more about this project</i></a>
                                         </span>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cnt-box cnt-box-team">
+                                    <div class="sponsor-logo-holder">
+                                        <img class="sponsor-logo sponsor-logo-cefp" src="/assets/conferences/cefp-grey.png" alt="" />
+                                    </div>
+                                    <div class="caption">
+                                        <h2>CEFP</h2>
+                                        <p>
+                                            We are proud to be the supporter of ICFP since 2012, being one of the long time supporters of the conference.
+                                        </p>
+                                        <span>
+                                            <a href="https://people.inf.elte.hu/cefp/" target="_blank">Read more about this project</i></a>
+                                        </span>
+
                                     </div>
                                 </div>
                             </li>
                         </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section-base">
-            <div class="container">
-                <div class="timeline">
-                    <div>
-                        <div class="badge"><p>#1 Achievement</p><span>08 January 2002</span></div>
-                        <div class="panel">
-                            <h3 class="timeline-title">Mussum ipsum cacilds</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
-                            </p>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="badge"><p>#2 Achievement</p><span>25 April 2017</span></div>
-                        <div class="panel">
-                            <h3 class="timeline-title">Mussum ipsum cacilds</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
-                            </p>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="badge"><p>#3 Achievement</p><span>11 March 2020</span></div>
-                        <div class="panel">
-                            <h3 class="timeline-title">Mussum ipsum cacilds</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipiscing elitsed do eiusmod tempore.
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
