Add extra sections

--- a/src/Hosted/research.html
+++ b/src/Hosted/research.html
@@ -29,7 +29,7 @@
     <nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
-    <header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="assets\research-1.jpg" data-offset="0">
+    <header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="883" data-natural-width="1552" data-bleed="0" data-image-src="assets\res_banner.jpg" data-offset="0">
         <div class="container">
             <h1>Research</h1>
             <h2>At IntelliFactory, we thrive to be a company that is on the frontline in the war of the bleeding edge technologies and researches. Over the years we have published many articles/pages to different conferences all over the world.</h2>
@@ -212,6 +212,36 @@
                                 </div>
                             </li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-base section-color">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="margin-23 margin-md-23" src="assets/classroom.jpg" />
+                    </div>
+                    <div class="col-lg-6">
+                        <h2>Academic institutions</h2>
+                        <p>
+                            Besides contributing papers to the conferences we are proud supporters of various events. Here you can find a list of events that we have sponsored so far:
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-base">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Internship</h2>
+                        <p>
+                            Besides contributing papers to the conferences we are proud supporters of various events. Here you can find a list of events that we have sponsored so far:
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
+                        <img class="margin-23 margin-md-23" src="assets/open-day.jpg" />
                     </div>
                 </div>
             </div>
