Fix header issue (caused by footer), fix cp command

--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -399,9 +399,12 @@
           </div>
           <div class="footer-bar">
               <div class="container">
-                  <span>Made with</span>
-                  <img width="24" height="20" style="vertical-align:top;" alt="Love" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Love_Heart_SVG.svg/32px-Love_Heart_SVG.svg.png">
-                  <span>in 100% F# with WebSharper. Copyright © IntelliFactory 2004-2020. Site design created by Schiocco Team.</span>
+                <div class="footer-last-section">
+                  <div class="footer-made-with">
+                    <span>Made with</span>
+                    <img width="24" height="20" style="vertical-align:top;" alt="Love" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Love_Heart_SVG.svg/32px-Love_Heart_SVG.svg.png">
+                    <span>in 100% F# with WebSharper. Copyright © IntelliFactory 2004-2020. Site design created by Schiocco Team.</span>
+                  </div>
                   <span class="icon-links icon-social icon-links-grid social-colors">
                     <a class="facebook" href="https://www.facebook.com/intellifactory"><i class="fab fa-facebook"></i></a>
                     <a class="twitter" href="https://twitter.com/intellifactory"><i class="fab fa-twitter"></i></a>
@@ -409,6 +412,7 @@
                     <a class="youtube" href="https://www.youtube.com/results?search_query=intellifactory"><i class="fab fa-youtube"></i></a>
                     <a class="vimeo" href="https://vimeo.com/user15828007"><i class="fab fa-vimeo"></i></a>
                   </span>
+                </div>
               </div>
           </div>
       </div>
