--- a/src/Hosted/internPosition.html
+++ b/src/Hosted/internPosition.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>F# Web Developer</title>
+    <title>F# Intern</title>
     <meta name="description" content="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -42,18 +42,18 @@
           <div class="row">
             <div class="col-lg-6">
               <hr class="space-xs" />
-              <h1 style="margin-top: 0">F# Web Developer</h1>
+              <h1 style="margin-top: 0">F# Intern</h1>
               <p>What you get:</p>
               <ul>
-                <li>Different technologies and challenges</li>
-                <li>Balanced work and life</li>
-                <li>Growth professionally and personally</li>
+                <li>First-hand developer experience</li>
+                <li>Team work</li>
+                <li>Programming knowledge</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <img
                 style="display: block; margin: 0 auto"
-                src="assets/open-position-1.jpg"
+                src="assets/intern-position-1.jpg"
               />
             </div>
           </div>
@@ -63,19 +63,19 @@
               <div class="row">
                 <div class="col-lg-8">
                   <p>
-                    We are looking for a motivated F# web developer to help us
-                    grow our business through a strong product strategy and
-                    expanded online presence. You will be responsible for
-                    helping us build our products for leading a variety of
-                    digital initiatives. Creativity, initiative and a proactive
-                    work ethic are highly valued!
+                    We are looking for a motivated F# intern to join our team
+                    and work alongside with our developers on our latest
+                    products. As an intern, you will participate creating new
+                    products and also help with existing product maintenance.
+                    You will attend brainstorm sessions for future product ideas
+                    as well.
                   </p>
                 </div>
                 <div class="col-lg-4">
                   <ul class="icon-list icon-circle">
-                    <li>Knowledge of F# development</li>
-                    <li>Team communication</li>
-                    <li>Experience in functinal programming</li>
+                    <li>Programming knowledge</li>
+                    <li>F# knowledge</li>
+                    <li>Experience in .NET framework</li>
                   </ul>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                         <i class="fas fa-calendar-alt text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Experience</h3>
-                          <p>Min 2 years</p>
+                          <p>Not required</p>
                         </div>
                       </div>
                     </td>
@@ -108,7 +108,7 @@
                         <i class="fas fa-user-graduate text-md"></i>
                         <div class="caption">
                           <h3 class="text-sm">Graduation</h3>
-                          <p>Required</p>
+                          <p>Not required</p>
                         </div>
                       </div>
                     </td>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-3">
               <a
-                href="mailto:hr@intellifactory.com?subject=F# Web Developer"
+                href="mailto:hr@intellifactory.com?subject=F# Intern"
                 target="_blank"
                 class="btn btn-sm btn-circle full-width"
                 >Send your resume</a
